# python-project-lvl2

./: .coverage  .gitignore  .travis.yml  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: check.yml  linter-check.yml  test-check.yml
gendiff/: diff.py  generate_diff.py  parser.py
gendiff/format/: stylish.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_diff.py  test_generate_diff.py
tests/fixtures/: nested1_j.json  nested2_j.json  result.json  result_json.txt  result_nested.txt
