[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["yauhen1996 <getthe798@gmail.com>"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"
pathlib2 = "^2.3.7"
pytest-cov = "^3.0.0"
PyYAML = "^6.0"
flake8 = "^4.0.1"
pytest = "^6.0.2"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
